<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_replythread"
        android:icon="@drawable/ic_reply_white_24dp"
        android:title="@string/menu_replythread"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_watch"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:title="@string/menu_watch"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_markread"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/menu_markread"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_unwatch"
        android:icon="@drawable/ic_visibility_off_white_24dp"
        android:title="@string/ctxmenu_unwatch"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_goto_last"
        android:title="@string/menu_goto_last"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_open_browser"
        android:icon="@drawable/ic_open_in_browser_white_24dp"
        android:title="@string/menu_browser"
        app:showAsAction="ifRoom" />
</menu>