<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?attr/AppBackground"
    android:id="@+id/home_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="8dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="@string/welcome_login"
        android:textColor="?attr/TextColourPrimary" />

    <EditText
        android:id="@+id/api_key_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:hint="@string/api_key_default"
        android:inputType="phone">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/login_btn" />

    <TextView
        android:id="@+id/api_key_where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/api_key_where"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?attr/TextColourSecondary" />

</LinearLayout>