<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?attr/AppBackground"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/home_root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/version_info"
            android:textColor="?attr/TextColourSecondary" />

        <TextView
            android:id="@+id/gregdev_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/gregdev_web"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/about_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/TextColourPrimary"/>

    </LinearLayout>
</ScrollView>