<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_welcome"
            android:id="@+id/textView"
            android:paddingBottom="16dp"
            android:layout_alignParentTop="true"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_description"
            android:id="@+id/textView2"
            android:paddingBottom="16dp"
            android:textColor="@color/TextColourPrimaryLight"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_next"
            android:id="@+id/textView3"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</RelativeLayout>