<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/logged_in_as"
            android:paddingBottom="16dp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_notifications"
            android:id="@+id/textView2"
            android:paddingBottom="16dp"
            android:textColor="@color/TextColourPrimaryLight"
            android:layout_below="@+id/logged_in_as"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_checkbox_whims"
            android:id="@+id/notify_whims"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_checkbox_threads"
            android:id="@+id/notify_threads"
            android:layout_below="@+id/notify_whims"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:id="@+id/middle_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notify_threads"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Check every"
                android:id="@+id/textView3"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/spinner2"
                android:entries="@array/array_pref_notifyfreq" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>